SendResultActivity criada e funcionamento de envio de resultado via intent

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,4 +6,10 @@
     <string name="send">Enviar</string>
     <string name="hello_name">Olá, %1$s!</string>
     <string name="send_to_result_screen">Enviar para Tela de Resultados</string>
+    <string name="open_screen_to_get_result">Abrir Tela para Receber Resultado</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
+    <string name="cancel">Cancelar</string>
+    <string name="activity_was_cancelled">Tela foi Cancelada</string>
+    <string name="data_received">Dado recebido: %1$s</string>
 </resources>
