--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="send_to_result_screen">Send to Result Screen</string>
+    <string name="open_screen_to_get_result">Open Screen to Get Result</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="cancel">Cancel</string>
+    <string name="activity_was_cancelled">Activity was cancelled</string>
+    <string name="data_received">Data received: %1$s</string>
 </resources>
